[gd_scene load_steps=3 format=3 uid="uid://bbh3jruh43esc"]

[ext_resource type="Script" uid="uid://ci6ak7d28nn1x" path="res://scripts/harm_area.gd" id="1_ju7nu"]
[ext_resource type="Script" uid="uid://bselcn0wpbc6v" path="res://scripts/components/instant_damage.gd" id="1_qs7in"]

[node name="HarmArea" type="Area2D" node_paths=PackedStringArray("instant_damage_component")]
collision_mask = 2
script = ExtResource("1_ju7nu")
instant_damage_component = NodePath("InstantDamage")

[node name="InstantDamage" type="Node" parent="."]
script = ExtResource("1_qs7in")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
